doc-index-updater/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
spec:
  template:
    spec:
      containers:
        - name: doc-index-updater
          image: mhraproductsproductionregistry.azurecr.io/products/doc-index-updater
