doc-index-updater/overlays/prod/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: doc-index-updater
  namespace: doc-index-updater
spec:
  selector:
    matchLabels:
      app: doc-index-updater
  action: ALLOW
  rules:
    - to:
        - operation:
            notPaths:
              - "/pars"
              - "/pars/*"
    - to:
        - operation:
            paths:
              - "/pars"
              - "/pars/*"
      from:
        - source:
            requestPrincipals:
              - "*"
          when:
            - key: request.auth.claims[groups]
              values:
                - "prod_writers_group_id"
